# filegate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  default_10768073593615466908_0_73143.profraw  docker-compose.yml  filegate.yaml
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/src/: admin.rs  blobs.rs  bytes.rs  cors.rs  error.rs  lease.rs  main.rs  metrics.rs  reconciler.rs  routes.rs  s3_surface.rs  spool.rs  status.rs  storage_access.rs  validation.rs
backend/crates/api/src/admin/: bindings.rs  clients.rs  error.rs  files.rs  mod.rs  moves.rs  policies.rs  storages.rs  usage.rs
backend/crates/api/src/s3/: auth.rs  handlers.rs  mod.rs  multipart.rs  xml.rs
backend/crates/api/src/v1/: files.rs  mod.rs  multipart.rs  relay.rs
backend/crates/client/: Cargo.toml
backend/crates/client/src/: lib.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  crypto.rs  error.rs  hash.rs  lib.rs  security.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_domain.sql  0001_init.sql  0002_registry.sql  0003_derive_relay_secret.sql  0003_storage_public_endpoint.sql  0004_domain_operations.sql  0004_s3_surface.sql  0005_object_moves.sql  0005_relay_storage.sql  0006_placement_policies.sql
backend/crates/db/src/: files.rs  lib.rs  moves.rs  policies.rs  registry.rs  s3.rs  s3_registry.rs  s3_surface.rs  usage.rs
backend/crates/db/src/files/: access.rs  commit.rs  create.rs  geometry.rs  mod.rs  multipart.rs  sweep.rs
backend/crates/db/tests/: accounting.rs  history.rs  lifecycle.rs  migrations.rs  moves.rs  policies.rs  registry.rs  renewal.rs  s3.rs  s3_multipart.rs  snapshot.rs  usage.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: fs.rs  lib.rs  s3.rs
backend/crates/model/: Cargo.toml
backend/crates/model/src/: lib.rs
backend/crates/service/: Cargo.toml
backend/crates/service/src/: lib.rs  reconciler.rs
config/: filegate.yaml
configs/: filegate.yaml  providers.yaml
deploy/docker/: Dockerfile
deploy/local/: main.tf
docs/adr/: 000-identity.md  001-multi-provider.md  001-multi-storage.md  002-lease-model.md  003-url-ownership.md  004-config-layers.md  005-metadata-store.md  005-presigned-byte-plane.md  006-backend-language.md  006-s3-compat-surface.md  007-tiering-policy.md  README.md  ontology.md
docs/adr/diagrams/: derivation.d2  ontology.d2
docs/guide/: s3-onboarding.md  service-integration.md
docs/spec/: 00-operations.md  01-config-and-validation.md  01-registry.md  02-multipart.md  03-s3-surface.md  04-moves.md  05-placement-policy.md
docs/stack/: README.md
docs/vendors/: README.md  minio.md  oci.md  r2.md  s3.md
scripts/: e2e-multipart.sh  e2e-registry.sh  e2e-relay.sh  e2e-upload.sh  s3-capture.py  smoke.sh
spec/: 00-operations.md
terraform-provider/: dev.tfrc.example  go.mod
terraform-provider/examples/: main.tf
terraform-provider/internal/provider/: client.go  provider.go  provider_resource.go
tf-provider/: dev.tfrc.example  go.mod  main.go
tf-provider/examples/: main.tf
tf-provider/internal/provider/: binding_resource.go  client.go  client_key_resource.go  client_resource.go  client_test.go  provider.go  resource_helpers.go  storage_fs_resource.go  storage_resource.go
