[package]
name = "filegate-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "filegate"
path = "src/main.rs"

[dependencies]
filegate-core = { workspace = true }
filegate-db = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
