[package]
name = "filegate-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "filegate"
path = "src/main.rs"

[dependencies]
filegate-core = { workspace = true }
filegate-db = { workspace = true }
filegate-infra = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
md-5 = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
