[package]
name = "filegate-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "filegate"
path = "src/main.rs"

[dependencies]
filegate-core = { workspace = true }
filegate-db = { workspace = true }
filegate-infra = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# CORS preflight 라우터 테스트용 oneshot (ServiceExt). tower는 axum 경유로
# 이미 잠겨 있고, util feature만 테스트에서 켠다.
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
