[package]
name = "filegate-client"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "filegate_client"
path = "src/lib.rs"

[[bin]]
name = "fgclient"
path = "src/bin/fgclient.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
md-5 = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
