[package]
name = "filegate-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
