[package]
name = "filegate-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
