[package]
name = "filegate-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
filegate-core = { workspace = true }
filegate-model = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
