[package]
name = "filegate-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
filegate-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
