[package]
name = "filegate-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
filegate-core = { workspace = true }
filegate-model = { workspace = true }
filegate-db = { workspace = true }
filegate-infra = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
